format No , remove month in ConsoleReportPrinter, show lasted date and month